src/parser/tests/snapshots/parser@assignment.input.snap
---
source: src/parser/mod.rs
assertion_line: 555
expression: asts
input_file: src/parser/tests/inputs/assignment.input
---
- - x = x + 1
  - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Assign
              lhs:
                Expr:
                  Ident:
                    name: x
                    ty: ~
              rhs:
                Expr:
                  BinOp:
                    sym: Add
                    lhs:
                      Expr:
                        Ident:
                          name: x
                          ty: ~
                    rhs:
                      Expr:
                        Lit:
                          value:
                            UInt64: 1
                          ty: ~
                    ty: ~
              ty: ~
  - (= x (+ x 1))

