src/parser/tests/snapshots/parser@bin_ops.input.snap
---
source: src/parser/mod.rs
assertion_line: 484
expression: asts
input_file: src/parser/tests/inputs/bin_ops.input

---
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Minus
              lhs:
                Expr:
                  U64: 20
              rhs:
                Expr:
                  U64: 19
  - (- 20 19)
- - Err:
      message: "Unknown binary operator: !"
      line: 0
      column: 0
  - "Parsing error: Unknown binary operator: !"

