src/parser/tests/snapshots/parser@block.input.snap
---
source: src/parser/mod.rs
assertion_line: 491
expression: asts
input_file: src/parser/tests/inputs/block.input

---
- - Ok:
      - Stmt:
          Cond:
            cond:
              Expr:
                Var:
                  name: foo
            cons:
              - Expr:
                  Var:
                    name: bar
            alt: ~
  - (if foo bar)
- - Ok:
      - Stmt:
          Cond:
            cond:
              Expr:
                Var:
                  name: foo
            cons: []
            alt: ~
  - (if foo)
- - Err:
      message: "Expecting '{' to start block. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting '{' to start block. Got EOF"
- - Err:
      message: "Expecting '}' to terminate block"
      line: 0
      column: 0
  - "Parsing error: Expecting '}' to terminate block"

