src/parser/tests/snapshots/parser@call_expr.input.snap
---
source: src/parser/mod.rs
assertion_line: 439
expression: asts
input_file: src/parser/tests/inputs/call_expr.input

---
- - Ok:
      - Expr:
          Call:
            name: a
            args:
              - Var:
                  name: b
              - Var:
                  name: c
  - (a b c)
- - Err:
      message: "Expecting ')' in function call. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting ')' in function call. Got EOF"
- - Err:
      message: "Expecting ',' or ')' in function call. Got identifier: a"
      line: 1
      column: 3
  - "Parsing error: Expecting ',' or ')' in function call. Got identifier: a at 1:3"
- - Err:
      message: "Expecting ')' in function call. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting ')' in function call. Got EOF"
- - Err:
      message: "Expecting ',' or ')' in function call. Got identifier: b"
      line: 1
      column: 3
  - "Parsing error: Expecting ',' or ')' in function call. Got identifier: b at 1:3"

