src/parser/tests/snapshots/parser@call_with_call_arg.input.snap
---
source: src/parser/mod.rs
assertion_line: 484
expression: asts
input_file: src/parser/tests/inputs/call_with_call_arg.input

---
- - Ok:
      nodes:
        - Expr:
            Call:
              name: a
              args:
                - Expr:
                    Call:
                      name: b
                      args:
                        - Expr:
                            Ident:
                              name: c
  - (a (b c))

