src/parser/tests/snapshots/parser@call_with_expr_arg.input.snap
---
source: src/parser/mod.rs
assertion_line: 472
expression: asts
input_file: src/parser/tests/inputs/call_with_expr_arg.input

---
- - Ok:
      - Expr:
          Call:
            name: a
            args:
              - BinOp:
                  sym: Plus
                  lhs:
                    Var:
                      name: b
                  rhs:
                    U64: 1
              - BinOp:
                  sym: Minus
                  lhs:
                    Var:
                      name: c
                  rhs:
                    BinOp:
                      sym: Div
                      lhs:
                        U64: 2
                      rhs:
                        U64: 4
  - (a (+ b 1) (- c (/ 2 4)))

