src/parser/tests/snapshots/parser@expr.input.snap
---
source: src/parser/mod.rs
assertion_line: 542
expression: asts
input_file: src/parser/tests/inputs/expr.input
---
- - Ok:
      nodes:
        - Expr:
            BinOp:
              sym: Add
              lhs:
                Expr:
                  BinOp:
                    sym: Add
                    lhs:
                      Expr:
                        Lit:
                          value:
                            U64: 19
                          ty: ~
                    rhs:
                      Expr:
                        Ident:
                          name: a
                          ty: ~
                    ty: ~
              rhs:
                Expr:
                  Lit:
                    value:
                      U64: 40
                    ty: ~
              ty: ~
  - (+ (+ 19 a) 40)
- - Err:
      message: Premature end of expression
      line: 0
      column: 0
  - "Parsing error: Premature end of expression"
- - Err:
      message: Expecting primary expression. Got Else
      line: 1
      column: 6
  - "Parsing error: Expecting primary expression. Got Else at 1:6"
- - Err:
      message: Expecting primary expression. Got CloseParen
      line: 1
      column: 2
  - "Parsing error: Expecting primary expression. Got CloseParen at 1:2"
- - Err:
      message: Premature end of expression
      line: 0
      column: 0
  - "Parsing error: Premature end of expression"

