src/parser/tests/snapshots/parser@extern.input.snap
---
source: src/parser/mod.rs
assertion_line: 536
expression: asts
input_file: src/parser/tests/inputs/extern.input
---
- - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: cos
                args:
                  - - x
                    - Float
                ret_type: ~
              body: ~
  - "(define (cos x:float))"

