src/parser/tests/snapshots/parser@for.input.snap
---
source: src/parser/mod.rs
assertion_line: 491
expression: asts
input_file: src/parser/tests/inputs/for.input

---
- - Ok:
      - Stmt:
          For:
            var_name: x
            start:
              Expr:
                U64: 1
            cond:
              Expr:
                BinOp:
                  sym: Lt
                  lhs:
                    Expr:
                      Var:
                        name: x
                  rhs:
                    Expr:
                      U64: 10
            step:
              Expr:
                U64: 1
            body:
              - Expr:
                  Var:
                    name: foo
  - (for (let x 1) (< x 10) 1 foo)
- - Err:
      message: "Expecting 'let' after for. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting 'let' after for. Got EOF"
- - Err:
      message: Expecting identifier after let. Got EOF
      line: 0
      column: 0
  - "Parsing error: Expecting identifier after let. Got EOF"
- - Err:
      message: "Expecting '=' after identifer. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting '=' after identifer. Got EOF"
- - Err:
      message: Premature end of expression
      line: 0
      column: 0
  - "Parsing error: Premature end of expression"
- - Err:
      message: "Expecting ';' after start. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting ';' after start. Got EOF"

