src/parser/tests/snapshots/parser@func_def.input.snap
---
source: src/parser/mod.rs
assertion_line: 504
expression: asts
input_file: src/parser/tests/inputs/func_def.input

---
- - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: a
                args:
                  - - b
                    - I64
                  - - c
                    - I64
                ret_type: I64
              body:
                - Expr:
                    BinOp:
                      sym: Plus
                      lhs:
                        Expr:
                          BinOp:
                            sym: Plus
                            lhs:
                              Expr:
                                U64: 19
                            rhs:
                              Expr:
                                Ident:
                                  name: a
                      rhs:
                        Expr:
                          U64: 40
  - "(define (a b:i64 c:i64) (+ (+ 19 a) 40))"
- - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: a
                args:
                  - - b
                    - I64
                  - - c
                    - I64
                ret_type: I64
              body:
                - Expr:
                    BinOp:
                      sym: Plus
                      lhs:
                        Expr:
                          BinOp:
                            sym: Plus
                            lhs:
                              Expr:
                                U64: 19
                            rhs:
                              Expr:
                                Ident:
                                  name: a
                      rhs:
                        Expr:
                          U64: 40
                - Expr:
                    BinOp:
                      sym: Plus
                      lhs:
                        Expr:
                          Ident:
                            name: b
                      rhs:
                        Expr:
                          Ident:
                            name: a
  - "(define (a b:i64 c:i64) (+ (+ 19 a) 40) (+ b a))"
- - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: a
                args:
                  - - b
                    - I64
                ret_type: ~
              body:
                - Expr:
                    Ident:
                      name: b
  - "(define (a b:i64) b)"
- - Err:
      message: "Expecting '{' to start block. Got -"
      line: 1
      column: 14
  - "Parsing error: Expecting '{' to start block. Got - at 1:14"
- - Err:
      message: Expecting vartype as return after ->. Got OpenBrace
      line: 1
      column: 17
  - "Parsing error: Expecting vartype as return after ->. Got OpenBrace at 1:17"
- - Err:
      message: "Expecting vartype as return after ->. Got identifier: a"
      line: 1
      column: 17
  - "Parsing error: Expecting vartype as return after ->. Got identifier: a at 1:17"
- - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: a
                args: []
                ret_type: ~
              body: []
  - (define (a))
- - Err:
      message: Expecting function name in prototype. Got OpenParen
      line: 1
      column: 4
  - "Parsing error: Expecting function name in prototype. Got OpenParen at 1:4"
- - Err:
      message: "Expecting '(' in prototype. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting '(' in prototype. Got EOF"
- - Err:
      message: "Expecting ')' or identifier in prototype. Got OpenBrace"
      line: 1
      column: 7
  - "Parsing error: Expecting ')' or identifier in prototype. Got OpenBrace at 1:7"
- - Err:
      message: "Expecting ')' or identifier in prototype. Got OpenBrace"
      line: 1
      column: 14
  - "Parsing error: Expecting ')' or identifier in prototype. Got OpenBrace at 1:14"
- - Err:
      message: "Expecting ',' or ')' in prototype. Got identifier: b"
      line: 1
      column: 13
  - "Parsing error: Expecting ',' or ')' in prototype. Got identifier: b at 1:13"
- - Err:
      message: "Expecting '{' to start block. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting '{' to start block. Got EOF"
- - Err:
      message: "Expecting ')' or identifier in prototype. Got OpenBrace"
      line: 1
      column: 14
  - "Parsing error: Expecting ')' or identifier in prototype. Got OpenBrace at 1:14"
- - Err:
      message: "Expecting one of [',', ')', ':']. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting one of [',', ')', ':']. Got EOF"
- - Err:
      message: "Expecting '{' to start block. Got EOF"
      line: 0
      column: 0
  - "Parsing error: Expecting '{' to start block. Got EOF"
- - Err:
      message: Expecting vartype in prototype. Got CloseParen
      line: 1
      column: 8
  - "Parsing error: Expecting vartype in prototype. Got CloseParen at 1:8"
- - Err:
      message: "Expecting ':' in prototype. Got CloseParen"
      line: 1
      column: 7
  - "Parsing error: Expecting ':' in prototype. Got CloseParen at 1:7"

