src/parser/tests/snapshots/parser@func_def_empty.input.snap
---
source: src/parser/mod.rs
assertion_line: 484
expression: asts
input_file: src/parser/tests/inputs/func_def_empty.input

---
- - Ok:
      nodes:
        - Stmt:
            Fn:
              proto:
                name: a
                args: []
              body: []
  - (define (a))

